Politur: mein und Marcos Text

--- a/Documentation/Report/Parts/Ergebnis.tex
+++ b/Documentation/Report/Parts/Ergebnis.tex
@@ -30,10 +30,10 @@
 Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir einen Überblick über den Verlauf der Kontostände aller unserer Konten. In der Tabelle darunter haben wir die Möglichkeit, alle Kontobewegungen nachzuverfolgen.
 
 \subsubsection{Filialfinder}
-	Beim Filialfinder findet man eine Karte von Apple Maps mit Markierungen, welche die Standorte der einzelnen Filialen markieren. Mit einem Klick auf das Infosymbol gelangt man zu einer Filialseite, auf der man die Öffnungszeiten nachschauen, aber auch eine Terminanfrage oder eine Sortenanfrage stellen kann.
+	Beim Filialfinder findet man eine Karte von Apple Maps mit Markierungen, welche die Standorte der einzelnen Filialen markieren. Mit einem Klick auf das Infosymbol gelangt man zu einer Filialseite, auf der man die Öffnungszeiten nachschauen, sowie eine Terminanfrage oder Sortenanfrage stellen kann.
 
 \subsubsection{Sortenanfrage}
-	Mit einem Klick auf Sortenanfrage bekommt der Nutzer ein Pop-Over zu sehen, in welchem er seine Wunschwährung auswählen kann. Die entsprechenden Umrechnungskurse werden intern direkt von der Europäischen Zentralbank bezogen. Hat man die Summe, welche umgetauscht werden soll eingegeben, so kann man die Anfrage stellen und bekommt eine Nachricht, ob die gewünschte Währung in der gewünschten Höhe bei der gewünschten Filiale verfügbar ist.
+	Mit einem Klick auf Sortenanfrage bekommt der Nutzer ein Pop-Over zu sehen, in welchem er seine Wunschwährung auswählen kann. Die entsprechenden Umrechnungskurse werden intern direkt von der Europäischen Zentralbank bezogen. Hat man die Summe, welche umgetauscht werden soll eingegeben, so kann man die Anfrage stellen und bekommt eine Nachricht, ob die gewünschte Währung in der entsprechenden Höhe bei der Filiale verfügbar ist.
 
 \subsubsection{Authentifizierung}
 \begin{figure}[h]
@@ -45,14 +45,14 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 	\caption{Die Authentifizierungsstati\label{fig4}}
 \end{figure}
 \pagebreak
-\noindent	Im oberen rechten Rand der Applikation ist ein kleines Symbol in Form eines Schildes zu sehen; dieses gibt den Authentifizierungsstatus zurück. Ein Schild mit einem Ausrufezeichen symbolisiert eine fehlende Authentifizierung, ein Haken eine gültige Authentifizierung.
+\noindent	Im oberen rechten Rand der Applikation ist ein kleines Symbol in Form eines Schildes zu sehen; dieses gibt den Authentifizierungsstatus zurück. Ein Schild mit einem Ausrufezeichen symbolisiert eine fehlende Authentifizierung. Ein Haken signalisiert eine gültige Authentifizierung.
 
-	Solange das Gerät nicht authentifiziert ist, kann man einige Funktionen nicht benutzen, diese sind durch das Symbol mit dem geschlossenen Schloss gekennzeichnet.
+	Solange das Gerät nicht authentifiziert ist, kann man einige Funktionen nicht benutzen, diese sind durch das Symbol eines ungeöffneten Schlosses gekennzeichnet.
 
 	Unter dem Menüpunkt Authentifizierung findet man ein kleines Comic vor. Dieses erläutert, wie der Nutzer sein Gerät bei seiner Filiale authentifizieren kann. Außerdem wird der Nutzer auf seine Vorteile aufmerksam gemacht.
 
 \subsubsection{Überweisung}
-	Unter dem Menüpunkt Überweisung findet man ein ganz gewöhnliches Überweisungsformular, die Überweisung muss man abschließend noch mit einer TAN bestätigen.
+	Unter dem Menüpunkt Überweisung findet man ein Überweisungsformular in digitaler Form vor. Nachdem das Formular ausgefüllt ist, muss die Überweisung abschließend mit einer TAN bestätigt werden. Kontonummer und Bankleitzahl werden im Zuge dessen auf Korrektheit ihres Formats geprüft.
 
 \subsubsection{Self-Service-Station}
 \begin{figure}[h]
@@ -62,7 +62,7 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 	\label{fig5}
 \end{figure}
 
-\noindent	Bei der Self-Service-Station haben wir die Möglichkeit, sofern wir mit dem Stationsgerät verbunden sind, drei verschiedene Aktionen eigenständig durchzuführen. Eine Umbuchung, Kontoauszüge anschauen und drucken, sowie Bescheinigungen ansehen, ausfüllen und ausdrucken gegeben falls direkt abschicken.
+\noindent	Bei der Self-Service-Station haben wir die Möglichkeit, sofern wir mit dem Stationsgerät verbunden sind, drei verschiedene Aktionen eigenständig durchzuführen. Eine Umbuchung, Kontoauszüge anschauen und drucken, sowie Bescheinigungen ansehen, ausfüllen und ausdrucken gegebenfalls direkt abschicken.
 
 	Jede Auswahlmöglichkeit hat eine Tabelle mit Inhalten, die den User erwarten, wenn er auf den entsprechenden Button drückt.
 
@@ -84,7 +84,7 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 	\label{fig7}
 \end{figure}
 
-	Im Kontoauszugsbildschirm kann man Kontoaktivitäten in einem bestimmten Zeitraum drucken lassen. Somit integriert die Station den althergebrachten Kontoauszugsdrucker und gibt ihm eine zeitgemäßere Oberfläche.
+	Im Kontoauszugsbildschirm kann man Kontoaktivitäten für einen bestimmten Zeitraum drucken lassen. Somit integriert die Station den althergebrachten Kontoauszugsdrucker und gibt ihm eine zeitgemäßere Oberfläche.
 
 \subsubsection{Umbuchungen}
 \begin{figure}[h]
@@ -94,7 +94,7 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 	\label{fig8}
 \end{figure}
 
-	Im Umbuchungsbildschirm kann der Nutzer sowohl Ziel- als auch Quellkonto auswählen, zwischen denen der angegebene Betrag transferiert werden soll. Das Ganze wird mit einem Button bestätigt. Insbesondere wird hier das klassische Sparbuch um eine komfortable Umbuchungsfunktionalität erweitert, ohne dass dessen filialgebundener Charakter verloren ginge.
+	Im Umbuchungsbildschirm kann der Nutzer sowohl Ziel- als auch Quellkonto auswählen, zwischen denen der angegebene Betrag transferiert werden soll. Das Ganze wird mit einem Button bestätigt. Insbesondere wird hier das klassische Sparbuch um eine komfortable Umbuchungsfunktionalität erweitert. Umbuchungen werden weiterhin in den Räumlichkeiten der Bank vorgenommen, weshalb der filialgebundene Charakter erhalten bleibt.
 \pagebreak
 \subsubsection{Finanzierungsrechner}
 \begin{figure}[h]
@@ -106,7 +106,7 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 
 	Mit dem Finanzierungsrechner kann man sich Kreditkonditionen zusammenstellen. Die Werte der einzelnen Schieberegler werden aus dem Profil des Kundens von der Bank vorgegeben.
 
-	Man kann danach auch wieder einen Beratungstermin vereinbaren um die Konditionen mit seinem Berater nochmal durchsprechen zu können, inwiefern die ausgewählten Konditionen empfehlenswert für den Kunden sind oder ob die Bank vielleicht noch bessere Sonderkonditionen anbieten kann.
+	Anschließend kann man einen Beratungstermin vereinbaren, um die Konditionen mit seinem Berater im Detail durchsprechen zu können. Im Rahmen des Gesprächs bietet sich die Möglichkeit zu prüfen, inwiefern die ausgewählten Konditionen empfehlenswert für den Kunden sind oder ob die Bank vielleicht noch bessere Konditionen anbieten kann.
 
 \subsubsection{Mein Bereich}
 %Nachrichtensystem
@@ -134,7 +134,7 @@ Das Dashboard ist die zentrale Anlaufstelle der Applikation; dort haben wir eine
 
 Um unsere Applikation in mancher Hinsicht besser auf unsere Bedürfnisse anzupassen, haben wir bei einigen Designelementen die Standardimplementierungen von Apple ergänzt. Dennoch blieben die iOS 7 Richtlinien ein Qualitätsmaßstab für uns.
 
-Wie in (A) zu sehen ist, bekam unser Schieberegler als kleine Erweiterung eine schwarze Sprechblase, welche den aktuellen Wert anzeigt. Dies ist im Speziellen unter dem Gesichtspunkt der Bedienbarkeit implementiert worden, damit man beim Verschieben des Regler nicht immer auf die linke Seite schauen muss um den aktuellen Wert abzulesen.
+Wie in (A) zu sehen ist, bekam unser Schieberegler als kleine Erweiterung eine schwarze Sprechblase, welche den aktuellen Wert anzeigt. Dies ist im Speziellen unter dem Gesichtspunkt der Bedienbarkeit implementiert worden, damit man beim Verschieben des Reglers nicht immer auf die linke Seite schauen muss, um den aktuellen Wert abzulesen.
 
 Die mitgegebenen Textfelder von Apple haben in der Regel immer einen Text, welcher dem Nutzer einen Hinweis gibt, was für ein Inhalt erwartet wird. Diese Umsetzung sieht oftmals unschön aus und nimmt viel Platz ein. Mit unserer Implementierung (B) verliert das Textfeld keine Funktionalität, ist aber schlanker.
 
@@ -154,12 +154,12 @@ Die Standard Pop-Over lassen sich nur bedingt anpassen. So konnten wir die Farbe
 
 	Mit einer neu zu erlernenden Programmiersprache und deren Entwicklungsumgebung geht auch immer eine Herausforderung einher. Die ersten Wochen hatten wir somit erwartungsgemäß etwas geringere Produktivität, weil wir uns auf diese Gegebenheiten erst einstellen mussten. Je weiter jedoch das Projekt voranschritt, desto sicherer fühlten wir uns in Objective-C und im Umgang mit Xcode.
 
-	Während der Entwicklung stießen wir auch immer wieder auf Einschränkungen seitens Apple bezüglich der Standard GUI-Elemente. So konnten wir beispielsweise die Tint-Color eines Buttons im Pop-Over nicht ändern. Apple lässt dies nicht zu. Daher mussten wir hier unser eigenes Pop-Over implementieren.
+	Während der Entwicklung stießen wir auch immer wieder auf Einschränkungen seitens Apple bezüglich der Standard GUI-Elemente. So konnten wir beispielsweise die Tint-Color eines Buttons im Pop-Over nicht ändern. Wie erwähnt griffen wir, falls nötig, in diesen Fällen auf Eigenimplementationen zürück.
 	
-	Weiterhin wollten wir auch gewährleisten, dass unsere Applikation, sowohl in der Potrait-Ansicht, als auch in der Landscape-Ansicht gut aussieht. Dafür haben wir in den meisten Fällen das Auto-Layout verwendet.
+	Weiterhin wollten wir auch gewährleisten, dass unsere Applikation, sowohl in der Potrait-Ansicht, als auch in der Landscape-Ansicht gut aussieht. Dafür haben wir in den meisten Fällen die Auto-Layout-Technik verwendet. Die Verhältnisse und Größen der GUI-Elemente werden dabei mit Hilfe von Constraints beschrieben. Ändert sich das Ansichtsformat, passen sich diese dynamisch an die neuen Gegebenheiten an.
 	
-	Bei einigen Features überdeckte die hereinfahrende Tastatur das vom Nutzer ausgewählte Eingabefeld. Anstatt die Anordnung der Elemente der einzelnen Bildschirme zu verändern, haben wir eine dynamische Scrollen implementiert, welches soweit scrollt, dass das vom Nutzer fokussierte Element sich immer ganz oben im Sichtbereich befindet.
+	Bei einigen Features überdeckte die hereinfahrende Tastatur das vom Nutzer ausgewählte Eingabefeld. Anstatt die Anordnung der Elemente der einzelnen Bildschirme zu verändern, haben wir dynamische Scrollviews in das Projekt integriert. Diese reagieren stets so, dass sich das vom Nutzer fokussierte Element möglichst zentral im freien Sichtbereich befindet.
 
-	Nichtsdestotrotz konnten wir mit Unterstützung der Betreuer alle größeren und kleineren Herausforderungen bewältigen und hatten nie das Gefühl, vor einem unüberwindbaren Problem zu stehen.
+	Zusammenfassend betrachtet konnten wir mit Unterstützung der Betreuer, alle größeren und kleineren Herausforderungen bewältigen und hatten nie das Gefühl, vor einem unüberwindbaren Problem zu stehen.
 	
 	
