--- a/Documentation/Report/Parts/Ergebnis.tex
+++ b/Documentation/Report/Parts/Ergebnis.tex
@@ -154,9 +154,9 @@ Die Standard Pop-Over lassen sich nur bedingt anpassen. So konnten wir die Farbe
 
 	Mit einer neu zu erlernenden Programmiersprache und deren Entwicklungsumgebung geht auch immer eine Herausforderung einher. Die ersten Wochen hatten wir somit erwartungsgemäß etwas geringere Produktivität, weil wir uns auf diese Gegebenheiten erst einstellen mussten. Je weiter jedoch das Projekt voranschritt, desto sicherer fühlten wir uns in Objective-C und im Umgang mit Xcode.
 
-	Während der Entwicklung stießen wir auch immer wieder auf Einschränkungen seitens Apple bezüglich der Standard GUI-Elemente. So konnten wir beispielsweise die Tint-Color eines Buttons im Pop-Over nicht ändern. Wie erwähnt griffen wir, falls nötig, in diesen Fällen auf Eigenimplementationen zürück.
+	Während der Entwicklung stießen wir immer wieder auf Einschränkungen seitens Apple bezüglich der Standard GUI-Elemente. So konnten wir beispielsweise die Tint-Color eines Buttons im Pop-Over nicht ändern. Wie erwähnt griffen wir, falls nötig, in diesen Fällen auf Eigenimplementationen zurück.
 	
-	Weiterhin wollten wir auch gewährleisten, dass unsere Applikation, sowohl in der Potrait-Ansicht, als auch in der Landscape-Ansicht gut aussieht. Dafür haben wir in den meisten Fällen die Auto-Layout-Technik verwendet. Die Verhältnisse und Größen der GUI-Elemente werden dabei mit Hilfe von Constraints beschrieben. Ändert sich das Ansichtsformat, passen sich diese dynamisch an die neuen Gegebenheiten an.
+	Darüber hinaus wollten wir gewährleisten, dass die GUI-Elemente unserer Applikation, sowohl in der Potrait-Ansicht, als auch in der Landscape-Ansicht gut gesetzt sind. Dafür haben wir in den meisten Fällen die Auto-Layout-Technik verwendet. Die Verhältnisse und Größen der Elemente werden dabei mit Hilfe von Constraints beschrieben. Ändert sich das Ansichtsformat, passen sich diese dynamisch an die neuen Gegebenheiten an.
 	
 	Bei einigen Features überdeckte die hereinfahrende Tastatur das vom Nutzer ausgewählte Eingabefeld. Anstatt die Anordnung der Elemente der einzelnen Bildschirme zu verändern, haben wir dynamische Scrollviews in das Projekt integriert. Diese reagieren stets so, dass sich das vom Nutzer fokussierte Element möglichst zentral im freien Sichtbereich befindet.
 
