--- a/Documentation/Report/Parts/Idee.tex
+++ b/Documentation/Report/Parts/Idee.tex
@@ -36,9 +36,9 @@
     Der Name der App, „\textbf{K}i\textbf{B}a“, steht – in Anlehnung an eine bekannte Direktbank – ,für eine kundeninteressierte Bank, die mit der Anwendung mehr über ihre Kunden erfahren möchte und mit ihnen in Austausch treten will, um spezifischere Angebote und Beratungen anbieten zu können.
     
 \subsection{Plattform}
-    Bei der Erstellung eines konkreten Konzepts der Funktionalität haben wir zunächst die Anwendungsfälle besprochen, um die Frage nach der Plattform zu klären. Zweifelsohne gibt es Features, die in einem mobilen Anwendungsfall wahrscheinlicher sind, etwa das Auffinden eines Geldautomaten. Eine solche Funktionalität wäre aber nicht filialbankspezifisch. Überhaupt erschien es uns, als wäre der typische Anwendungsfall für Bankgeschäfte eher stationär, etwa auf dem Sofa oder im Büro, jedenfalls aber in Ruhe. Ein überzeugendes Argument für eine iPad-App war auch, dass Kunde und Berater in der Filiale auf dem größeren Bildschirm besser zusammen mit der App interagieren und Dinge visualisieren können.     
+    Für die Wahl einer geeigneten Plattform – iPad oder iPhone – haben wir uns zunächst überlegt, in welchen Situationen wir die Interaktion mit einer Banking-App für wahrscheinlich hielten. Zweifelsohne gibt es dabei Szenarien, die in einem mobilen Anwendungsfall wahrscheinlicher sind, etwa das Auffinden eines Geldautomaten. Eine solche Funktionalität wäre aber nicht filialspezifisch. Überhaupt erschien es uns, als wäre der typische Anwendungsfall für Bankgeschäfte eher stationär, etwa auf dem Sofa oder im Büro, jedenfalls aber in Ruhe. Ein überzeugendes Argument für eine iPad-App war auch, dass Kunde und Berater in der Filiale auf dem größeren Bildschirm besser zusammen mit der App interagieren und Dinge visualisieren können.     
     
-    Somit überwogen in der Gruppe ganz eindeutig die Argumente für eine iPad-Anwendung. Zudem war es Aufgabe, eine Vision für die Banking-App der Zukunft zu entwickeln. Der Trend geht unserer Meinung nach zum ubiquitären WLAN; so gibt es beispielsweise Bestrebungen, öffentliche Netzwerke in der Innenstadt einzurichten. Insofern darf davon ausgegangen werden, dass die mobile Konnektivität zukünftig auch beim iPad unproblematisch ist und somit webbasierte Funktionalität auch unterwegs gegeben ist.
+    Somit überwogen in der Gruppe eindeutig die Argumente für eine iPad-Anwendung. Zudem war es Aufgabe, eine Vision für die Banking-App der Zukunft zu entwickeln. Der Trend geht unserer Meinung nach zum ubiquitären WLAN; so gibt es beispielsweise Bestrebungen, öffentliche Netzwerke in der Hamburger Innenstadt einzurichten. Insofern darf davon ausgegangen werden, dass die mobile Konnektivität zukünftig auch beim iPad unproblematisch ist und somit webbasierte Funktionalität auch unterwegs gegeben ist.
     
 \subsection{Funktionen}
 \subsubsection{Finder}
