--- a/Documentation/Report/Parts/UIUX.tex
+++ b/Documentation/Report/Parts/UIUX.tex
@@ -3,9 +3,9 @@
 \subsection{Mockups}
 	Vor Beginn der Gestaltung der Mockups haben wir uns auf dem Markt der Banking-Apps umgeschaut, um die verschiedenen UI-Patterns, die in diesem Zusammenhang genutzt werden, zu vergleichen. Mit Balsamiq entwarfen wir anschließend erste Mockups. Bei der Anordnung der Elemente haben wir uns die Prinzipien der Gestaltungsgesetze zunutze gemacht. Insbesondere halfen uns das Gesetz der Ähnlichkeit und das Gesetz der Nähe, Ordnung in die UI zu bringen. 
 
-	Unser Ziel war es, ein möglichst gebrauchstaugliches Design zu erreichen. Dazu haben wir uns an den Grundsätzen der Dialoggestaltung nach der DIN EN ISO 9241 110 orientiert. Bei der Gestaltung haben wir nur eine Schriftart verwendet und uns nach festgelegte Farbsemantiken gerichtet. Dadurch geht der Fokus auf den Inhalt nicht verloren und der Nutzer kann die App erwartungskonform nutzen. Bei der Navigation haben wir uns für eine Master-Detail-View entschieden. Dadurch haben wir eine flache Navigationshierarchie, die es uns ermöglicht, alle wichtigen Funktionen von der Hauptseite direkt zu erreichen. Auf diese Weise haben wir unnötige Interaktionen minimiert und der Nutzer kann effizient und aufgabenangemessen mit der App interagieren.  
+	Unser Ziel war es, ein möglichst gebrauchstaugliches Design zu erreichen. Dazu haben wir uns an den Grundsätzen der Dialoggestaltung nach der DIN EN ISO 9241 110 orientiert. Bei der Gestaltung haben wir nur eine Schriftart verwendet und uns nach festgelegten Farbsemantiken gerichtet. Dadurch geht der Fokus auf den Inhalt nicht verloren und der Nutzer kann die App erwartungskonform nutzen. Bei der Navigation haben wir uns für eine Master-Detail-View entschieden. Dadurch haben wir eine flache Navigationshierarchie, die es uns ermöglicht, alle wichtigen Funktionen von der Hauptseite direkt zu erreichen. Auf diese Weise haben wir unnötige Interaktionen minimiert und der Nutzer kann effizient und aufgabenangemessen mit der App interagieren.  
 
-	Auf jeder Detail-View befindet sich unten rechts ein Informationbutton. Mit diesem Button wollen wir die Selbstbeschreibungsfähigkeit der App verbessern und die Nutzer bei Problemen unterstützen.
+	Auf jeder Detail-View befindet sich unten rechts ein Informationbutton. Mit diesem Button wollen wir die Lernförderlichkeit der App verbessern und die Nutzer bei Problemen unterstützen. Allerdings haben wir diese Funktion nur rudimentär umgesetzt.
 	
 \begin{figure}[p]
 	\centering
@@ -15,7 +15,7 @@
 	\caption{Mockup des Dashboards, der Filial-Seite und der Überweisung}
 \end{figure}
 
-	Die Elemente in der Detail-View sind asymmetrisch angeordet mit einer Gewichtung oben links und unten rechts. So erreichen wir eine diagonale Balance, die optimal für den optischen Fluss ist.
+	Die Elemente in der Detail-View sind asymmetrisch angeordet mit einer Gewichtung oben links und unten rechts. So erreichen wir eine diagonale Balance, die optimal für den visuellen Fluss ist.
 
 \subsection{Prototyp}
 	Allgemein haben wir uns beim Design des User-Interface an den Guidelines von IOS7 orientiert. In diesem Zusammenhang haben wir uns mit den wichtigsten Grundsätzen laut Apple „Deference“, „Clarity“ und „Depth“ beschäftigt, um diese auf unser User-Interface zu übertragen. 
@@ -35,9 +35,11 @@
 	Unsere ausgewählte Farbharmonie spiegelt die Werte einer modernen Bank wider. Mit den Farben wollen wir Sicherheit, Nachhaltigkeit und Seriosität vermitteln. Allerdings waren wir bei der Logogestaltung in dieser Hinsicht nicht ganz konsequent. Wir hatten an dieser Stelle die Diskussion, ob wir uns nicht für ein anderes Logo entscheiden sollten. Mit dem KiBa-Glas im Logo haben wir uns dann darauf geeinigt, als Studenten ein wenig Humor zuzulassen. Im Zusammenspiel mit dem recht nüchternen Design wirkt das Logo auflockernd.
 
 \subsection{UI-Elemete}
-	Grundsätzlich haben wir mit den Standard-View-Elementen von iOS7 gearbeitet. Allerdings haben wir in machen Fällen auf ein Custom-Element zurückgegriffen und dieses dann konsequent eingesetzt. Bei dem Standard-Text-Field störte uns etwa, dass der Hint-Text bei der Eingabe verschwand und so die Eingabe gelöscht werden musste, um diesen wieder zu sehen. Man stelle sich vor, man möchte ein Überweisungsformular ausfüllen und während der Eingabe eines Feldes ist man sich nicht mehr sicher, wofür dieses steht. 
-
-	Daher entschieden wir uns für eine Eigenlösung, die den Vorteil hat, dass der Hint-Text bei erfolgter Eingabe nach oben rückt und auf diese Weise sichtbar bleibt. 
+	Grundsätzlich haben wir mit den Standard-View-Elementen von IOS7 gearbeitet. Allerdings haben wir in manchen Fällen auf Custom-Elemente zurückgegriffen und diese dann möglichst konsequent eingesetzt. Dabei haben wir darauf geachtet, dass die Eigenlösungen zu dem IOS7 Design passen. Bei dem Standard-Text-Field störte uns, dass der Placeholder-Text bei der Eingabe verschwand und so die Eingabe gelöscht werden musste, um diesen wieder zu sehen. Man stelle sich vor, man möchte ein Überweisungsformular ausfüllen und während der Eingabe eines Feldes ist man sich nicht mehr sicher, wofür dieses steht. Daher entschieden wir uns für eine Eigenlösung, die den Vorteil hat, dass der Placeholder-Text bei erfolgter Eingabe nach oben rückt und auf diese Weise sichtbar bleibt.(JVFloatLabeledTextField von Jared Verdi)
+Der Verbindungsaufbau mit der KiBa-Station und die Authentifikation sind wichtige Elemente in unserem Konzept. Besonders an dieser Stelle war es uns wichtig Sicherheit bei der Datenübertragung zu vermitteln. Mit dem flexiblen und individuell gestaltbaren SVProgressHUD von Sam Vermette konnten wir nach unseren Vorstellungen diese Vorgänge abbilden.
+Bei der Standard-Alert-View hatten wir das Problem, dass wir die Button-Farbe nicht anpassen konnten. Allerdings hatten wir bereits eine bestimmte Farbe für Buttons festgelegt. Um Erwartungskonformität zu gewährleisten, griffen wir auf das CustomIOS7AlertView von Richard Dancsi zurück. Mit dieser Alert-View konnten wir u.a. die Button-Farbe auf unser Design anpassen.
+Auf der Überweisungsseite hatte das Standard-Element des Datepickers zu viel Gewicht in der UI bekommen. Um dieser Unausgeglichenheit entgegenzuwirken haben wir den Picker durch den FlatDatePicker von Steven Shen ersetzt. Dieser Picker hat den Vorteil, dass er im Design und Gebrauch dem Standard-Datepicker sehr ähnlich ist, dafür aber weniger Raum in der UI einnimmt.
+ 
 
 \subsection{UX Inspektion \& Test}
 	Wöchentlich hatten wir im Plenum die Möglichkeit, unseren Stand der App vorzustellen. Hier konnten in einer anschließenden Diskussion Unklarheiten im Konzept und Design angesprochen werden. Da sich im Plenum unter anderem Dr. Kindsmüller befand, konnten wir von dem Wissen eines erfahrenen UX-Experten profitieren. Beispielsweise deckte er auf, dass wir eine Geste nicht erwartungskonform verwendeten. Bei der Scheck-Überweisung wollten wir anfangs mit der Wischgeste nach unten die Überweisung abschicken. Allerdings wird diese Wischgeste normalerweise als „Pull-to-refresh“-Geste verwendet. Daher war hier die Affordanz (Angebotscharakter) nicht gegeben. Um Verwirrung beim potentiellen Nutzer zu vermeiden, haben wir die Geste durch einen einfachen Button zum Abschicken der Überweisung ersetzt und die Animation entsprechend angepasst.
