Bericht: Meta-Daten in PDF gegossen.

--- a/Documentation/Report/Projektbericht.tex
+++ b/Documentation/Report/Projektbericht.tex
@@ -200,6 +200,13 @@
     Julius Wulk\vphantom{yMö}}
 \title{Die „KiBa“-App}
 \date{Wintersemester 2013/14}
+\hypersetup{pdftitle = {Die \glqq{}KiBa\grqq{}-App},
+            pdfsubject = {Projektbericht der App},
+            pdfauthor = {Droste, Fasselt, Jendryczko, M\"ollers, Schaarschmidt, Wulk},
+            pdfcreator = {Gruppe 1 - KiBa},
+            pdfproducer = {KiBa App PDF},
+            linkbordercolor = {.25390625 .4375 .484375},
+            urlbordercolor = {.25390625 .4375 .484375}}
 
     
 %===============================================================================
