--- a/Documentation/Report/Parts/Idee.tex
+++ b/Documentation/Report/Parts/Idee.tex
@@ -15,9 +15,7 @@
 
 	Allerdings, und hier haben wir die Chance unserer Anwendung gesehen, bedeutet die technische Möglichkeit eines Vertriebsweges nicht gleich, dass dieser auch angenommen wird. Eine von uns im Sinne einer Markterkundung durchgeführte Umfrage ergab ein gewisses Misstrauen gegenüber der Idee, Finanztransaktionen per App durchzuführen oder überhaupt eine Bank-App zu benutzen.
 	
-	Gründe hierfür könnten vielfältig sein; beispielsweise könnten die befragten Studenten am Informatikcampus eine besondere Sensibilität bezüglich Aspekten des Datenschutzes haben. Eine von der Unternehmensberatung „Bain and Company“ durchgeführte Studie zur Frage, wie digitalisierte Vertriebswege das Privatkundengeschäft der Banken zukünftig prägen könnten, ergab jedoch einen ähnlichen Tenor\footnote{\url{http://www.bain.de/Images/Retail\_Banking\_II\_Digitalisierung\_ES.pdf}, Abruf am 23.02.2014 um 16:30 Uhr.}.
-
-	Insbesondere ergab die Studie, dass für Geldanlagen dem persönlichen Gespräch der Vorzug vor digitaler Beratung gegeben würde. Somit könnte es trotz aller technischen Möglichkeiten auch langfristig noch einen Markt für persönliche Beratung von Angesicht zu Angesicht geben.
+	Gründe hierfür könnten vielfältig sein; beispielsweise könnten die befragten Studenten am Informatikcampus eine besondere Sensibilität bezüglich Aspekten des Datenschutzes haben. Eine von der Unternehmensberatung „Bain and Company“ durchgeführte Studie zur Frage, wie digitalisierte Vertriebswege das Privatkundengeschäft der Banken zukünftig prägen könnten, ergab jedoch einen ähnlichen Tenor\footnote{\url{http://www.bain.de/Images/Retail\_Banking\_II\_Digitalisierung\_ES.pdf}, Abruf am 23.02.2014 um 16:30 Uhr.}. Insbesondere ergab die Studie, dass für Geldanlagen dem persönlichen Gespräch der Vorzug vor digitaler Beratung gegeben würde. Somit könnte es trotz aller technischen Möglichkeiten auch langfristig noch einen Markt für persönliche Beratung von Angesicht zu Angesicht geben.
  
 \subsection{Vision}
 	Schließlich entstand die Vision einer Anwendung, die nicht versucht, aus einer Filialbank eine Direktbank mit Filialen als Zusatzangebot zu machen, sondern die die bestehenden Produkte des Filialgeschäfts dem Kunden näher bringt und ihm Grund gibt, in eine Filiale zu gehen. 
